--- a/book/Parts/Part3.tex
+++ b/book/Parts/Part3.tex
@@ -1396,36 +1396,46 @@ We have shown in previous sections that finite-volume schemes are typically writ
 \end{equation}
 where $\vec u_i$ is a constant approximation of the state variable vector within the cell defined by $\Omega_i = [x_{i-1/2}, x_{i+1/2}]$, and $\vec F_{i+1/2}$ and $\vec F_{i-1/2}$ are interface flux vectors of the form
 \begin{equation}
-	\vec F_{i+1/2} = \vec F(\vec u_{i+1/2}).
+	\vec F_{i+1/2} = \vec F(\vec u_{i+1/2}),
 \end{equation}
-At the interface between $\Omega_i$ and $\Omega_{i+1}$ defined at $x_{i+1/2}$, the value of the flux is generally obstained from a constant vector of the solution within the cell, i.e. $\vec u_{i+1/2}=\vec u_{i}$. This approach is known as the Godunov method, which is first order accurate. Nevertheless, we can derive methods with orders of accuracy higher than one, allowing the numerical error to significantly decrease. Increasing the order of a finite-volume method can be done replacing the constant interface values of the solution $\vec u_{i+1/2}$ by a reconstructed value interpolated introducing information from neighbouring cells. This idea, developed by van Leer, is an extension of Godunov's method, and is known as the MUSCL (monotone upstream-centered schemes for conservation laws) reconstruction approach. 
-
-For a second order scheme, we consider the solution to be a linear Taylor series expansion around the cell center $x_j$ by
+where $u_{i+1/2}$ is the solution at the interface between $\Omega_i$ and $\Omega_{i+1}$ defined at $x_{i+1/2}$. At this point, two values of the solution $u_{i+1/2}^L$, $u_{i+1/2}^R$ coexist, and hence the flux is obtained using a Riemann solver. In the first-order method of Godunov, the interface solution values are equal to the cell averages in the corresponding control volumes, i.e. 
+\begin{align}
+	u_{i+1/2}^L &= u_i,\\
+	u_{i+1/2}^R &= u_{i+1}.
+\end{align}
+For a better resolution of smooth solutions, we can derive methods with orders of accuracy higher than one, allowing the numerical error to significantly decrease. This can be done by replacing the constant interface values of the solution $\vec u_{i+1/2}$ for a reconstructed value, which is interpolated using information from neighbouring cells. This idea, developed by van Leer, is an extension of Godunov's method, and is known as the MUSCL (monotone upstream-centered schemes for conservation laws) reconstruction approach. A graphical representation of the method is shown in Figure~\ref{fig:muscl_scheme}.
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.5\linewidth]{Pictures/muscl_scheme}
+	\caption{Linear reconstruction of the solution at interfaces $x_{i-1/2}$ and $x_{i+1/2}$}
+	\label{fig:muscl_scheme}
+\end{figure}
+Hence, the solution is approximated by a Taylor series expansion around the cell center $x_i$
 \begin{equation}
-	u(x) = u_i + (x-x_j)\frac{\partial u_i}{\partial x},
+	u(x) = u_i + (x-x_i)\frac{\partial u_i}{\partial x} + \frac{1}{4}(x-x_i)\frac{\partial^2 u_i}{\partial x^2} + \ldots,
 	\label{eq:3209423}
 \end{equation}
-where $\frac{\partial u}{\partial x}$ can be computed using cell solution differences. Note that this reconstruction process can be done using additional terms in Equation~\ref{eq:3209423} to yield higher order schemes. Hence, on the left and right sides of the interface at $x=x_{i+1/2}$, the solution can be found by
+where the derivatives are computed using cell solution differences with respect to neighbouring cells. Note that this reconstruction process can be done using additional terms in Equation~\ref{eq:3209423} to yield higher order schemes. Hence, on the left and right sides of the interface, the solution can be found by
 \begin{align}
 	\vec u_{i+1/2}^L &= \vec u_i + \frac{1}{2} \vec \delta_i,\\
 	\vec u_{i+1/2}^R &= \vec u_{i+1} - \frac{1}{2} \vec \delta_{i+1},
 \end{align}
-where the so-called slopes $\delta_i$ can be defined using a blended approach
+where the so-called slopes $\delta_i$ can be defined using a blended approach with upwinding parameter $b$
 \begin{equation}
-	\vec \delta_i = \frac{1}{2}(1+r)\delta \vec u_{i-1/2} + \frac{1}{2}(1-r)\delta \vec u_{i+1/2},
+	\vec \delta_i = \frac{1}{2}(1+b)\delta \vec u_{i-1/2} + \frac{1}{2}(1-r)\delta \vec u_{i+1/2},
 	\label{eq:48742938}
 \end{equation}
-such that $r=1$ is a upwind-biased approximation of the derivative. In Equation~\ref{eq:48742938},
+such that $r=1$ results in an upwind-biased approximation. Considering a linear reconstruction, the solution slopes are given by
 \begin{align}
 	 \delta \vec u_{i+1/2} = \vec u_{i+1} - \vec u_i, \\
 	 \delta \vec u_{i-1/2} = \vec u_{i} - \vec u_{i-1}.
 \end{align}
-Then, the common flux can be computed using an appropriate Riemann solver
+Finally, the common fluxes can be computed using an appropriate Riemann solver of the form
 \begin{equation}
 	\vec F_{i+1/2} = F(\vec u^L_{i+1/2},\vec  u^R_{i+1/2}).
 \end{equation}
 \subsection{Second-Order Upwind Scheme for Linear Advection}
-For linear advection, we have shown that an appropriate solver is the upwind Riemann flux, given by
+For linear advection, acommon choice is the upwind Riemann flux given by
 \begin{equation}
 	F^{upw}(u^L, u^R) = \alpha u^L,
 	\label{eq:120398}
@@ -1453,9 +1463,13 @@ which yields the following second-order upwind-biased scheme
 		\label{eq:34290}
 	\end{equation}	
 \end{eqBox}
-
+Later in this chapter, we show results of a numerical experiment using this scheme.
 \subsection{Total Variation Diminishing}
-We can measure the total variation (TV) of a discrete solution
+The total variation (TV) of a scalar conservation law such as the linear advection equation is given by 
+\begin{equation}
+	TV(u) = \int \left|\frac{\partial u }{\partial x}\right|dx,
+\end{equation}
+which can be written for the discrete approximation 
 \begin{equation}
 	TV(u) = \sum_{i=1}^N |u_{i+1}-u_i|,
 \end{equation}
@@ -1463,32 +1477,51 @@ where $N$ is the number of finite volume cells. A numerical method is said to be
 \begin{equation}
 	TV(u^t+1)\leq TV(u^t).
 \end{equation}
-In addition, Godunov's theorem states
+Harten proved that TVD schemes are monotonicity-preserving, meaning that in time,maxima does not increase, minima does not decrease, and no new extrema are generated in the solution. It turns out that this property can only be attributed to certain types of schemes. Godunov's theorem states
 \begin{theorem}
 	Linear numerical schemes for solving partial differential equations (PDE's), having the property of not generating new extrema (monotone scheme), can be at most first-order accurate.
 \end{theorem}
-Hence, while higher-order schemes are more accurate for smooth solutions, they introduce spurious oscillations in the presence of discontinuities, shocks and large solution gradients and are thus not TVD. Different approaches can be used to ensure the TVD property for high-order numerical methods. In the next section, we discuss one of these techniques, known as flux/slope limiters.
+Hence, while higher-order schemes are more accurate for smooth solutions, they introduce spurious oscillations in the presence of discontinuities, shocks and large solution gradients and are thus not TVD. Different approaches can be used to ensure the TVD property for high-order numerical methods under these circumstances. In the next section, we discuss one of these techniques, known as flux/slope limiters.
 
 
 \subsection{Limiters}
 Introducing limiters to high-order formulations prevents the generation of oscillations in regions where nonsmooth solutions are present. Recall that Godunov's theorem states that only first-order accurate schemes are able to produce solutions without generating new extrema. Hence, limiters are used as a switch mechanism which transforms the high-order numerical scheme into a first-order method in the presence of discontinuities. This is done by evaluating and comparing slopes between neighbouring cells. In this section, we introduce limiters to the MUSCL reconstruction framework in Section~\ref{sec:muscl}.
-Consider rewriting the MUSCL formulation in Equation~\ref{eq:48742938} using limited slopes 
+
+The MUSCL formulation in Equation~\ref{eq:48742938} can be rewritten for a scalar conservation law using limited slopes 
 \begin{align}
-	\overline \delta_i = \frac{1}{2}(1+r)\phi^+_{i-1/2}\delta u_{i-1/2} + \frac{1}{2}(1-r)\phi^-_{i+1/2}\delta u_{i+1/2},
+	\overline \delta_i = \frac{1}{2}(1+b)\phi^+_{i-1/2}\delta u_{i-1/2} + \frac{1}{2}(1-b)\phi^-_{i+1/2}\delta u_{i+1/2},
+	\label{eq:91830192}
 \end{align}
 where the limiting functions can be defined using ratios of the slopes with neighbouring cells. At interface $x_{i+m}$, the slope limiter is given by
 \begin{eqnarray}
-	\phi^{\pm}_{i+m} = \phi(r^{\pm}_{i+m}),\quad r^{\pm}_{i+m} = \frac{\delta u_{i+m\pm 1}}{\delta u_{i+m}}.
+	\phi^{\pm}_{i+m} = \phi\left(r^{\pm}_{i+m}\right),\quad r^{\pm}_{i+m} = \frac{\delta u_{i+m\pm 1}}{\delta u_{i+m}}.
 \end{eqnarray}
-Consider the second-order upwind-biased scheme in Equation~\ref{eq:34290}. We can rewrite it using slope limiters using interface fluxes of the form
+Limiters are designed to treat similarly both upwind and downwind slopes by satisfying the symmetry condition
+\begin{equation}
+	\frac{\phi(r)}{r} = \phi\left(\frac{1}{r}\right),
+\end{equation}
+which allows us to simplify Equation~\ref{eq:91830192} to
+\begin{eqBox}
+	\begin{equation}
+		\overline \delta_i = \frac{\phi(r_{i-1/2}^+)}{2} \left[(1+b)\delta u_{i-1/2} + \frac{1}{r_{i-1/2}^+} \delta u_{i+1/2}\right],
+	\end{equation}
+\end{eqBox}
+where
+\begin{eqBox}
+	\begin{equation}
+	r_{i-1/2}^+ = \frac{\delta u_{i+1/2}}{\delta u_{i-1/2}} = \frac{u_{i+1}-u_i}{u_i-u_{i-1}}.
+	\end{equation}
+\end{eqBox}
+
+For the second-order upwind-biased scheme in Equation~\ref{eq:34290}, we can obtain a scheme with limiting functions using interface fluxes of the form
 \begin{align}
-	F_{i+1/2} &= F(u_{i+1/2}) = \alpha u_i + \frac{\alpha}{2}\phi^+_{i-1/2}\left(u_i-u_{i-1}\right),\\
-	F_{i-1/2} &= F(u_{i-1/2}) = \alpha u_{i-1} + \frac{\alpha}{2}\phi^+_{i-3/2}\left(u_{i-1}-u_{i-2}\right).
+	F_{i+1/2} &= F(u_{i+1/2}) = \alpha u_i + \frac{\alpha}{2}\phi(r^+_{i-1/2})\left(u_i-u_{i-1}\right),\\
+	F_{i-1/2} &= F(u_{i-1/2}) = \alpha u_{i-1} + \frac{\alpha}{2}\phi(r^+_{i-3/2})\left(u_{i-1}-u_{i-2}\right).
 \end{align}
-Clearly, in the case $\phi(r) = 0$, the scheme will reduce to the first-order upwind scheme. Some slope limiting functions are shown in Table~\ref{table:limiters}. We now show an application of these functions using the linear advection equation.
-\begin{table}[h]
+Clearly, in the case $\phi(r) = 0$, the flux reduces to the first-order upwind scheme. Some slope limiting functions are shown in Table~\ref{table:limiters}. In the next section, we show applications of these limiters in the context of linear advection and the Euler equations.
+\begin{table}[tb]
 	\centering
-	\caption{Common forms of slope limiter functions $\phi(r)$}
+	\caption{Common forms of limiter functions $\phi(r)$}
 	\begin{tabular}{cl}
 		\hline
 		Name & $\phi(r)$ \\ \hline
@@ -1499,11 +1532,11 @@ Clearly, in the case $\phi(r) = 0$, the scheme will reduce to the first-order up
 	\label{table:limiters}
 \end{table}
 
-\subsection{Examples}
+\subsection{Numerical Examples}
 \subsubsection{Linear Advection}
 Consider the following advection problem
 \begin{align}
-	\frac{\partial u}{\partial t} + \frac{\partial u}{\partial x} = 0
+	\frac{\partial u}{\partial t} + \frac{\partial u}{\partial x} = 0,
 \end{align}
 on a grid with $x\in[0,2]$ with periodic boundary conditions. The solution at $t=0$ is given by
 \begin{align}
@@ -1514,11 +1547,23 @@ on a grid with $x\in[0,2]$ with periodic boundary conditions. The solution at $t
 		0 & \text{otherwise}.
 	\end{cases}
 \end{align}
-As we see in Figure~\ref{fig:}, the initial conditions consist of a smooth gaussian profile and a step function. Due to the nature of the equation, we only expect a translation of the initial condition through the domain. At $t=2$, a complete advective cycle has passed and $u(x,2)$ is expected to be equal to $u(x,0)$. Using the second-order advection scheme with $r=1$ and $N=300$ cells, the solution is shown in Figure~\ref{fig: }. In the smooth region of the domain, the second-order scheme does a good job representing the solution, but we observe that the discontinuities on the right side of the domain contain large oscillations that overshoot and undershoot the solution. 
+which consist of a smooth gaussian profile and a step function. Due to the nature of the equation, we expect a translation of the initial condition through the domain without any deformation. At $t=2$, a complete cycle has occurred and it is expected that $u_i^{t=2}\approx u(x_i,0)$. Using the second-order advection scheme with $b=1$ and $N=300$ cells, the solution is shown in Figure~\ref{fig:advection_muscl}. In the smooth region of the domain, the second-order scheme does a good job representing the solution, but we observe that the discontinuities on the right side of the domain contain large oscillations that overshoot and undershoot the exact solution. 
 
-Implementation of the limiters in Table~\ref{table:limiters} removes the presence of oscillations in the solution. 
+Implementation of the function in Table~\ref{table:limiters} shows the monotonicity of the slope-limited methods. Clearly, the resolution of the shock does not include oscillations, and some limiters introduce more dissipation than others. In all limited cases, observe the crest of the Gauss wave. Due to the slope change of the solution in that region, we have therein introduced additional error.
 
-\subsubsection{The Euler Equations}
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=\linewidth]{Pictures/advection_muscl}
+	\caption{Second-order upwind-biased advection scheme (upper left) using minmod (upper right), van Leer (lower left) and superbee (lower right) limiters}
+	\label{fig:advection_muscl}
+\end{figure}
+
+A comparison of the TVD properties of the scheme and other additional assessments can be made via the MUSCL Schemes Jupyter notebook. 
+\begin{jupyternote}
+	Check out the MUSCL Schemes Jupyter notebook \href{\binderurl}{\underline{here}}. You can also download the files from the Gitlab repository \href{\repourl}{\underline{here}}.
+\end{jupyternote}
+
+\subsubsection{Sod's Shock-Tube Problem}
 Consider Sod's shock-tube problem with initial conditions
 \begin{align}
 	\vec u_L = 
@@ -1538,50 +1583,19 @@ Consider Sod's shock-tube problem with initial conditions
 	\begin{bmatrix}
 		\frac{1}{8} \\ 0 \\ \frac{1}{10}
 	\end{bmatrix}.
+	\label{eq:39248243}
 \end{align}
-on a domain $x\in[0, 1]$ and $t\in(0,0.2]$. Figure~\ref{} shows a comparison between Godunov's scheme and a linear MUSCL-reconstructed method with different limiters. The limited slopes for this problem have the form 
-\begin{equation}
-	\vec {\overline \delta_i} = \frac{1}{2}(1+r)\vec \phi^+_{i-1/2}
-	\begin{bmatrix}
-		\delta \rho_{i-1/2} \\ \delta (\rho u)_{i-1/2} \\ \delta (\rho E)_{i-1/2}
-	\end{bmatrix} + \frac{1}{2}(1-r)\vec \phi^-_{i+1/2}
-	\begin{bmatrix}
-		\delta \rho_{i+1/2} \\ \delta (\rho u)_{i+1/2} \\ \delta (\rho E)_{i+1/2}
-	\end{bmatrix}
-\end{equation}
-\begin{figure}[htbp]
+on a domain $x\in[0, 1]$ and $t\in(0,0.2]$. Figure~\ref{fig:euler_muscl} shows a comparison between Godunov's first-order scheme and a linear MUSCL-reconstructed method with different limiters. We note that this problem is unstable for the MUSCL scheme if no limiter function is added. 
+The analysis of these results is similar to the advection example and is left as an exercise to the student. The corresponding Jupyter notebook shows the implementation of these functions for the Euler equations.
+
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=\linewidth]{Pictures/euler_muscl}
-	\caption{}
+	\caption{Results of Sod's shock tube problem at $t=2$ with initial conditions in Equation~\ref{eq:39248243}}
 	\label{fig:euler_muscl}
 \end{figure}
-\begin{exercise}
-	Compute the total variation (TV) of the above example using the minmod, van Leer and superbee limiter functions. Which one is the most suitable for this problem?
-\end{exercise}
-\begin{exercise}
-	Repeat the previous problem with initial conditions
-	\begin{itemize}
-		\item \begin{align}
-			u^1(x, 0) &= 
-			\begin{cases}
-				e^{-20(x-0.5)^2} & \text{if } x < 1.2, \\ 
-				1 & \text{if } 1.2 < x < 1.5,	 \\
-				0 & \text{otherwise}.
-			\end{cases}
-		\end{align}
-		\item \begin{align}
-			u^2(x, 0) &= 
-			\begin{cases}
-				e^{-20(x-0.5)^2} & \text{if } x < 1.2, \\ 
-				1 & \text{if } 1.2 < x < 1.5,	 \\
-				0 & \text{otherwise}.
-			\end{cases}
-		\end{align}
-	\end{itemize}
-\end{exercise}
-
 \begin{jupyternote}
-	Check out the High-Order Finite Volume Jupyter notebook \href{\binderurl}{\underline{here}}. You can also download the files from the Gitlab repository \href{\repourl}{\underline{here}}.
+	Check out the Sod's Shock-Tube Problem Jupyter notebook \href{\binderurl}{\underline{here}}. You can also download the files from the Gitlab repository \href{\repourl}{\underline{here}}.
 \end{jupyternote}
 
 \chapter{Consistency, Stability, Convergence}
