--- a/notebooks/MUSCL Schemes.ipynb
+++ b/notebooks/MUSCL Schemes.ipynb
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "Import figure style and custom functions\n",
+    "# Import figure style and custom functions\n",
     "import nbtools as nb"
    ]
   },
@@ -38,13 +38,15 @@
     "We wil implement finite-volume methods based on MUSCL reconstruction to solve \n",
     "\n",
     "\\begin{align}\n",
-    "\t\\frac{\\partial u}{\\partial t} + \\frac{\\partial u}{\\partial x} = 0\n",
+    "\t\\frac{\\partial u}{\\partial t} + \\frac{\\partial u}{\\partial x} = 0,\n",
     "\\end{align}\n",
     "on a grid $x\\in[0,2]$ with periodic boundary conditions. \n",
     "\n",
-    "Following the example in the textbook, we implement ``residual_muscl`` to compute the residual using the second-order upwind-biased method. For the advection scheme, we use a Riemann solver of the form $F_(u_L,u_R) = F(u_L)$. \n",
+    "Following the example in the textbook, we implement ``residual`` to compute the residual using the second-order upwind-biased method. For the advection scheme, we use a Riemann solver of the form $F_(u_L,u_R) = F(u_L)$. \n",
     "\n",
-    "**Note**: Only ``dl`` is implemented due to the upwind Riemann solver. Later, you will need to implement the right slope ``dr``."
+    "**Note**: Only ``dl`` is implemented due to the upwind Riemann solver. Later, you will need to implement the right slope ``dr``.\n",
+    "\n",
+    "Complete the functions below. For any three values of ``u``, ``u0``, ``u1`` and ``u2`` are ordered from left to right in ``get_slope``. For example, $u_{i-2}, u_{i-1}, u_i$."
    ]
   },
   {
@@ -53,35 +55,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_slope(u0, u1, u2, r):\n",
+    "def get_slope(u0, u1, u2, b):\n",
     "    # Linear reconstruction\n",
-    "    return 0.5*(1 + r)*(u1 - u0) + 0.5*(1 - r)*(u2 - u1)\n",
+    "    delta = # Complete definition for delta_i\n",
+    "    return delta\n",
     "\n",
     "def residual(u, a, dx):\n",
+    "    # Initialize residual vector\n",
     "    res = 0.0*u\n",
-    "    r = 1.0\n",
+    "    b = 0.0\n",
     "    for i in range(n):\n",
     "        # Interface i+1/2\n",
-    "        if n == n - 1:\n",
+    "        if i == n - 1:\n",
     "            # Enforce periodic BC at x=L\n",
-    "            dl = get_slope(u[i - 1], u[i], u[0], r)\n",
+    "            dl = get_slope(u[i - 1], u[i], u[0], b)\n",
     "        else:\n",
-    "            dl = get_slope(u[i - 1], u[i], u[i + 1], r)\n",
+    "            dl = get_slope(u[i - 1], u[i], u[i + 1], b)\n",
     "            \n",
     "        # Compute u_i+1/2,L\n",
     "        ul = \n",
     "        \n",
-    "        # Compute f_i+1/2 using the upwind Riemann solver\n",
-    "        fupw_R = \n",
+    "        # Compute f_i+1/2=a*uL using the upwind Riemann solver\n",
+    "        fR = a*ul\n",
     "        \n",
     "        # Interface i-i/2\n",
-    "        dl = get_slope(u[i - 2], u[i - 1], u[i], r) \n",
+    "        dl = get_slope(u[i - 2], u[i - 1], u[i], b) \n",
     "        \n",
     "        # Compute u_i-1/2,L\n",
     "        ul = \n",
     "        \n",
-    "        # Computr f_i-1/2 using the upwind Rieman solver\n",
-    "        fupw_L = \n",
+    "        # Computr f_i-1/2=a*uL using the upwind Rieman solver\n",
+    "        fL = \n",
     "        \n",
     "        res[i] = -(fupw_R - fupw_L)/dx\n",
     "    return res"
@@ -116,6 +120,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Complete the following cell to set the initial parameters of the problem. Consider\n",
+    "- ``a = 1.0``\n",
+    "- ``n = 300``\n",
+    "- ``L = 2.0``\n",
+    "- ``dt = 2e-3``\n",
+    "- ``tf = 2.0``\n",
     "The initial solution profile is given by\n",
     "\\begin{align}\n",
     "\tu(x, 0) &= \n",
@@ -124,13 +134,7 @@
     "\t\t1 & \\text{if } 1.2 < x < 1.5,\t \\\\\n",
     "\t\t0 & \\text{otherwise}.\n",
     "\t\\end{cases}\n",
-    "\\end{align}\n",
-    "Complete the following cell to set the initial parameters of the problem. Consider\n",
-    "- ``a = 1.0``\n",
-    "- ``n = 300``\n",
-    "- ``L = 2.0``\n",
-    "- ``dt = 2e-3``\n",
-    "- ``tf = 2.0``\n"
+    "\\end{align}"
    ]
   },
   {
@@ -153,8 +157,8 @@
     "u0 = np.zeros(n)\n",
     "for i, xval in enumerate(x):\n",
     "    if xval < 1.2:\n",
-    "        u0[i] =\n",
-    "    if 1.2 < xval < 1.5:\n",
+    "        u0[i] = \n",
+    "    elif 1.2 < xval < 1.5:\n",
     "        u0[i] = \n",
     "    else:\n",
     "        u0[i] = "
@@ -164,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Advance the solution using the time-stepping function provided above"
+    "Run the following cell to advance the solution using the time-stepping function provided above"
    ]
   },
   {
@@ -191,10 +195,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tv0 = np.sum(np.abs(u0[1:]-u[:-1]))\n",
-    "tvf = \n",
+    "tv_u0 = np.sum(np.abs(u0[1:] - u0[:-1]))\n",
+    "tv_uf = \n",
     "\n",
-    "if tvf <= tv0:\n",
+    "if tv_uf <= tv_u0:\n",
     "    print('Scheme is TVD')\n",
     "else:\n",
     "    print('Scheme is not TVD')"
@@ -204,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot your result for each implemented limiter"
+    "Plot the solution of the second-order upwind-biased scheme and compare with initial solution"
    ]
   },
   {
@@ -214,55 +218,8 @@
    "outputs": [],
    "source": [
     "plt.figure(0)\n",
-    "plt.plot(x, u_adv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To preserve the monotonicity of the scheme, we need to define limiter functions. Complete the ``van_leer`` and ``superbee`` limiters using the formulations shown in the textbook. Note the use of a tolerance variable ``1e-20`` to avoid divisions by zero."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def minmod(a, b):\n",
-    "    r = a/(b + 1e-20)\n",
-    "    return max([0, min([1, r])])\n",
-    "\n",
-    "def van_leer(a, b):\n",
-    "    # Complete limiter code\n",
-    "    \n",
-    "def superbee(a, b):\n",
-    "    # Complete limiter code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Modify the definition of the ``residual`` function (or rewrite it below) to include the limiters following the theory in the textbook. To facilitate the implementation, use the variable ``limiter(a,b)`` to obtain the values of the limiter. \n",
-    "\n",
-    "**Note**: No modification of the arguments in ``residual`` is necessary.\n",
-    "\n",
-    "For each of the limiter functions, generate a plot and compute the total variation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(1)\n",
-    "labels = ['minmod', 'van Leer', 'superbee']\n",
-    "for i, limiter in zip([minmod, van_leer, superbee]):\n",
-    "    u_adv = advance_solution(u0, a, dx, dt, tf)\n",
-    "    plt.plot(x, u_adv, label=labels[i])\n",
+    "plt.plot(x, u0, 'k', lw=1, label=r'$u(x,0)$')\n",
+    "plt.plot(x, u_adv, 'o', color='#bd0c00', ms=1.5, label=r'$u(x,t^*)$')\n",
     "plt.legend()"
    ]
   },
@@ -270,11 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Activities\n",
-    "- Modify the definition of ``get_slope`` to obtain a quadratic approximation of the slope at the boundaries. Repeat the exercises in the notebook using the new order. \n",
-    "- What are the advantages and disadvantages of increasing the order of the scheme?\n",
-    "- Modify the definition of ``residual`` to use a Riemann solver of the form $F(u_L, u_R)$. To achieve this, implement a function named ``riemann_solver`` and compute the ``dr`` slopes at each interface.\n",
-    "- Rewrite ``riemann_solver`` using a Roe solver, to be used with the Burgers equation."
+    "To preserve the monotonicity of the scheme, we need to define limiter functions. Complete the ``van_leer`` and ``superbee`` limiters using the formulations shown in the textbook."
    ]
   },
   {
@@ -282,7 +235,143 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def minmod(r):\n",
+    "    return max([0, min([1, r])])\n",
+    "    \n",
+    "def van_leer(r):\n",
+    "    return \n",
+    "\n",
+    "def superbee(r):\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complete the ``get_slope`` function below to include the limiters following the theory in the textbook, then run the cell. \n",
+    "**Note:**, you will need to add ``ep`` to any division by ``r`` to avoid infinity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_slope(u0, u1, u2, b):\n",
+    "    ep = 1e-20\n",
+    "    # Compute ratio of slopes\n",
+    "    r = \n",
+    "    phi = limiter(r)\n",
+    "    # Compute limited slope\n",
+    "    delta = \n",
+    "    return delta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each of the limiter functions implemented above, generate a plot of the solution to compare results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 2.5), ncols=3, sharex=True, sharey=True)\n",
+    "\n",
+    "# Minmod limiter\n",
+    "limiter = minmod\n",
+    "u_adv = advance_solution(u0, a, dx, dt, tf) \n",
+    "ax[0].plot(x, u0, 'k', lw=1)\n",
+    "ax[0].plot(x, u_adv, 'o', markersize=1.5, color='#bd0c00')\n",
+    "ax[0].set_ylabel('$u$')\n",
+    "ax[0].set_xlabel('$x$')\n",
+    "ax[0].set_title('minmod')\n",
+    "\n",
+    "# van Leer limiter\n",
+    "limiter = van_leer\n",
+    "u_adv = advance_solution(u0, a, dx, dt, tf) \n",
+    "ax[1].plot(x, u0, 'k', lw=1)\n",
+    "ax[1].plot(x, u_adv, 'o', markersize=1.5, color='#bd0c00')\n",
+    "ax[1].set_ylabel('$u$')\n",
+    "ax[1].set_xlabel('$x$')\n",
+    "ax[1].set_title('van Leer')\n",
+    "\n",
+    "# Superbee limiter\n",
+    "limiter = superbee\n",
+    "u_adv = advance_solution(u0, a, dx, dt, tf) \n",
+    "ax[2].plot(x, u0, 'k', lw=1)\n",
+    "ax[2].plot(x, u_adv, 'o', markersize=1.5, color='#bd0c00')\n",
+    "ax[2].set_ylabel('$u$')\n",
+    "ax[2].set_xlabel('$x$')\n",
+    "ax[2].set_title('superbee')\n",
+    "\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Activities\n",
+    "- What are the advantages and disadvantages of increasing the order of the scheme?\n",
+    "- Check whether the schemes with limiter functions are now TVD\n",
+    "- Modify the definition of ``residual`` to use a Riemann solver of the form $F(u_L, u_R)$. To achieve this, implement a function named ``riemann_solver`` and compute the ``dr`` slopes at each interface. Templates are provided below.\n",
+    "- Rewrite ``riemann_solver`` using a Roe solver for the Burgers equation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def riemann_solver(ul, ur):\n",
+    "    # Complete Riemann solver definition here\n",
+    "    \n",
+    "def residual(u, a, dx):\n",
+    "    res = 0.0*u\n",
+    "    b = 0.0\n",
+    "    for i in range(n):\n",
+    "        # Interface i+1/2\n",
+    "        if i == n - 1:\n",
+    "            # Enforce periodic BC at x=L\n",
+    "            dl = get_slope(u[i - 1], u[i], u[0], b)\n",
+    "            dr = \n",
+    "        elif i == n - 2:\n",
+    "            dl = \n",
+    "            dr = \n",
+    "        else:\n",
+    "            dl = get_slope(u[i - 1], u[i], u[i + 1], b)\n",
+    "            dr = \n",
+    "            \n",
+    "        # Compute u_i+1/2,L and u_i+1/2,R\n",
+    "        ul = u[i] + 0.5*dl\n",
+    "        ur = \n",
+    "        \n",
+    "        # Compute f_i+1/2 using the upwind Riemann solver\n",
+    "        fR = riemann_solver(ul, ur)\n",
+    "        \n",
+    "        # Interface i-i/2\n",
+    "        dl = get_slope(u[i - 2], u[i - 1], u[i], b) \n",
+    "        dr = \n",
+    "        \n",
+    "        # Compute u_i-1/2,L and u_i-1/2,R\n",
+    "        ul = u[i - 1] + 0.5*dl\n",
+    "        ur = \n",
+    "        \n",
+    "        # Computr f_i-1/2 using the upwind Rieman solver\n",
+    "        fL = riemann_solver(ul, ur)\n",
+    "        \n",
+    "        res[i] = -(fR - fL)/dx\n",
+    "    return res"
+   ]
   }
  ],
  "metadata": {
