Nonlinear section improvements + typo fixes in Part 3. Added multigrid, lid-driven cavity flow figures.

--- a/notebooks/Diffusion.ipynb
+++ b/notebooks/Diffusion.ipynb
@@ -44,27 +44,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def diffusion(b, L, dx, dt, tf):\n",
+    "def diffusion(b, L, n, dt, tf):\n",
     "    # Build grid\n",
     "    x = np.linspace(0, L, n)\n",
     "    dx = L/n\n",
     "    \n",
     "    # Initialize solution\n",
-    "    u = np.exp(-40*(x-1/2)**2)\n",
+    "    u = np.exp(-40*(x - 1/2)**2)\n",
     "    ut = np.zeros(u.shape)\n",
     "\n",
     "    # Advance solution in time\n",
     "    t = 0\n",
+    "    c = b*dt/dx**2\n",
     "    while(t < tf):\n",
     "        for i in range(n):\n",
     "            if i == 0:\n",
     "                # Enforce periodic boundary condition at x=0\n",
-    "                ut[i] = u[i] + b*dt/dx**2 * (u[n-1]-2*u[i]+u[i+1])\n",
-    "            elif i == n-1:\n",
+    "                ut[i] = u[i] + c*(u[n - 1] - 2*u[i] + u[i + 1])\n",
+    "            elif i == n - 1:\n",
     "                # Enforce periodic boundary condition at x=L\n",
-    "                ut[i] = u[i] + b*dt/dx**2 * (u[i-1]-2*u[i]+u[0])\n",
+    "                ut[i] = u[i] + c*(u[i - 1] - 2*u[i] + u[0])\n",
     "            else:\n",
-    "                ut[i] = u[i] + b*dt/dx**2 * (u[i-1]-2*u[i]+u[i+1])\n",
+    "                ut[i] = u[i] + c*(u[i - 1] - 2*u[i] + u[i + 1])\n",
     "        u[:] = ut[:]\n",
     "        t += dt\n",
     "    \n",
@@ -175,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
