--- a/notebooks/MUSCL Schemes.ipynb
+++ b/notebooks/MUSCL Schemes.ipynb
@@ -42,7 +42,7 @@
     "\\end{align}\n",
     "on a grid $x\\in[0,2]$ with periodic boundary conditions. \n",
     "\n",
-    "Following the example in the textbook, we implement ``residual`` to compute the residual using the second-order upwind-biased method. For the advection scheme, we use a Riemann solver of the form $F_(u_L,u_R) = F(u_L)$. \n",
+    "Following the example in the textbook, we implement ``residual`` to compute the residual using the second-order upwind-biased method. For the advection scheme, we use a Riemann solver of the form $F(u_L,u_R) = F(u_L)$. \n",
     "\n",
     "**Note**: Only ``dl`` is implemented due to the upwind Riemann solver. Later, you will need to implement the right slope ``dr``.\n",
     "\n",
